--- a/index.html
+++ b/index.html
@@ -2540,6 +2540,7 @@
     <!--/////////////////////////// footer section start/////////////////////// -->
 
     <footer>
+        
         <div class="footer-boxes">
             <div class="footer-first">
                 <h5>Get in Touch</h5>
@@ -2576,18 +2577,7 @@
                 </ul>
             </div>
 
-            <div class="footer-first">
-                <h5>Follow Us</h5>
-                <div class="footer-social-link">
-                    <a href="https://www.facebook.com/IQTechWay" target="_blank"><i
-                            class="fa-brands fa-facebook fa-xl"></i></a>
-                    <a href="https://www.instagram.com/iqtechway/?utm_source=ig_web_button_share_sheet&igsh=OGQ5ZDc2ODk2ZA%3D%3D"
-                        target="_blank"><i class="fa-brands fa-instagram fa-xl"></i></a>
-                    <a href="https://wa.me/+917538857567" target="_blank"><i
-                            class="fa-brands fa-whatsapp fa-xl"></i></a>
-                </div>
-
-            </div>
+           
         </div>
         <div class="footer-boxes">
             <div class="footer-first">
@@ -2685,7 +2675,23 @@
 
 
     </footer>
-    <!-- /////////////////footer section end/////////////// -->
+
+    <hr>
+
+    <section class="footer-quick-link p-lg-4 my-2 d-none d-lg-block ">
+        <div class="footer-quick-container container">
+            <div class="footer-links d-flex justify-content-center gap-3 flex-wrap flex-lg-row ">
+                <a href="about.html" style="color: var(--color); text-decoration: none;">Our Company</a>
+                <a href="case-studies.html" style="color: var(--color); text-decoration: none;">Case Studies</a>
+                <a href="join-team.html" style="color: var(--color); text-decoration: none;">Career</a>
+                <a href="blog.html" style="color: var(--color); text-decoration: none;">Blog</a>
+                <a href="hire.html" style="color: var(--color); text-decoration: none;">Hire</a>
+                <a href="privacy-policy.html" style="color: var(--color); text-decoration: none;">Privacy Policy </a>
+                <a href="contact.html" style="color: var(--color); text-decoration: none;">Contact</a>
+            </div>
+        </div>
+    </section>
+    <!-- ////////////////footer section end/////////////// -->
 
     <!-- Mobile Responsive Social Icons Start -->
 
@@ -2744,10 +2750,20 @@
 
     <!-- After footer start -->
 
-    <section class="after-footer">
-        <p>@Developed by <a href="https://iqtechway.com/" target="_blank">iqtechway</a></p>
+    <section class="after-footer align-items-center ">
+        <p class="mb-0">@Developed by <a href="https://iqtechway.com/" target="_blank">iqtechway</a></p>
 
-        <p><a href="privacy-policy.html">Privacy Policy</a></p>
+        <div class="footer-first">
+            <div class="footer-social-link d-flex gap-5">
+                <a href="https://www.facebook.com/IQTechWay" target="_blank"><i
+                        class="fa-brands fa-facebook fa-xl" style="color: #fff;"></i></a>
+                <a href="https://www.instagram.com/iqtechway/?utm_source=ig_web_button_share_sheet&igsh=OGQ5ZDc2ODk2ZA%3D%3D"
+                    target="_blank"><i class="fa-brands fa-instagram fa-xl" style="color: #fff;"></i></a>
+                <a href="https://wa.me/+917538857567" target="_blank"><i
+                        class="fa-brands fa-whatsapp fa-xl" style="color: #fff;"></i></a>
+            </div>
+
+        </div>
     </section>
 
     <!-- After footer end -->
