--- a/join-team.html
+++ b/join-team.html
@@ -399,7 +399,7 @@
         </div>
     </div>
 
-    <header class="header-1">
+    <header class="header-1 header-join">
 
         <!-- Header Section Start -->
         <!-- Navbar Section Start -->
@@ -442,7 +442,7 @@
 
         <div class="banner-section">
             <span class="since">Since 2015</span>
-            <h1>Explore Life at <span> iqtechway</span></h1>
+            <h1>Explore Life at <span> iQtechway</span></h1>
             <p>Welcome to a world of opportunities at iqtechway. At iqtechway we nurture the entrepreneurial spirit and
                 allow you to treat your job as if it was your own business and to help you do that we have created an
                 excellent work culture which is informal, non-political and transparent.</p>
@@ -450,6 +450,9 @@
 
         </div>
         <!-- banner section End -->
+
+        <!-- <div class="header-overlay"></div> -->
+        <div class="header-bottom"></div>
 
         <!-- Header Section End -->
 
