--- a/seo-company-in-madurai.html
+++ b/seo-company-in-madurai.html
@@ -948,6 +948,14 @@
 
     <!--////////////////////// Technologies Start//////////////////////// -->
     <section class="technologies-section">
+        <style>
+            .tab-content {
+                margin-top: 0%;
+                width: 100%;
+                text-align: start;
+                height: auto;
+            }
+        </style>
         <div class="technologies-overlay1"></div>
         <div class="technologies-overlay2"></div>
         <div class="technologies-container container">
