--- a/shopify.html
+++ b/shopify.html
@@ -454,7 +454,7 @@
         <!-- Header Section End -->
 
 
-        <div class="header-overlay"></div>
+        <!-- <div class="header-overlay"></div> -->
         
 
     </header>
