--- a/about.html
+++ b/about.html
@@ -801,8 +801,8 @@
     <section class="about-mission">
         <div class="about-mission-container container">
             <div class="about-mission-title">
-                <h2>Our <span>Vision</span>  & <span>Mission</span></h2>
-                <p>iQtechway is a prominent software company dedicated to assisting other organizations in digitizing their operations. Our primary objective is continuous development, aspiring to become a leading performer in the Information Technology realm. Our mission revolves around optimizing our customers' business processes by crafting top-notch solutions that facilitate their business expansion and unleash their inherent potential.</p>
+                <h2>Our <span>Vision</span> & <span>Mission</span></h2>
+                <p>iQtechway is a known software company that focuses on helping other organizations transition, to operations. Our main goal is to improve and become a leading player in the field of Information Technology. We are committed, to optimizing our customers business processes by creating high quality solutions that enable their business growth and unlock their potential.</p>
             </div>
             <div class="about-mission-row row">
                 <div class="about-mission-boxs col-lg-6 col-md-6 my-4 px-lg-4">
