--- a/index.html
+++ b/index.html
@@ -454,8 +454,7 @@
 
         <div class="banner-section">
             <h1>High quality professional <span> software development </span> services </h1>
-            <p>Over the years, the question has changed from why cloud to which cloud? Whether from an on-premises
-                server to Cloud or Cloud to Cloud.</p>
+            <p>  We are obsessed with growing your business. Fast.</p>
             <div class="banner-flex">
                 <a href="contact.html" class="btn">
                     <span class="btn-1"></span>
@@ -2680,14 +2679,14 @@
 
     <section class="footer-quick-link p-lg-4 my-2 d-none d-lg-block ">
         <div class="footer-quick-container container">
-            <div class="footer-links d-flex justify-content-center gap-3 flex-wrap flex-lg-row ">
-                <a href="about.html" style="color: var(--color); text-decoration: none;">Our Company</a>
-                <a href="case-studies.html" style="color: var(--color); text-decoration: none;">Case Studies</a>
-                <a href="join-team.html" style="color: var(--color); text-decoration: none;">Career</a>
-                <a href="blog.html" style="color: var(--color); text-decoration: none;">Blog</a>
-                <a href="hire.html" style="color: var(--color); text-decoration: none;">Hire</a>
-                <a href="privacy-policy.html" style="color: var(--color); text-decoration: none;">Privacy Policy </a>
-                <a href="contact.html" style="color: var(--color); text-decoration: none;">Contact</a>
+            <div class="footer-links d-flex justify-content-center gap-lg-4 flex-wrap flex-lg-row ">
+                <a href="about.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Our Company</a>
+                <a href="case-studies.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Case Studies</a>
+                <a href="join-team.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Career</a>
+                <a href="blog.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Blog</a>
+                <a href="hire.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Hire</a>
+                <a href="privacy-policy.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Privacy Policy </a>
+                <a href="contact.html" style="color: var(--color); text-decoration: none; font-size: 15px;">Contact</a>
             </div>
         </div>
     </section>
