--- a/seo.html
+++ b/seo.html
@@ -872,24 +872,39 @@
             <div class="seo-importants-container">
                 <div class="row text-center">
                     <div class="col-lg-4 col-md-6 px-4 my-4">
-                        <h3 style="font-size: 20px; color: var(--color);">ORGANIC SEARCH IS A PRIMARY SOURCE OF WEBSITE TRAFFIC</h3>
-                        <p class="text-center">Organic search results drive the majority of website traffic, and studies show that over 50% of website traffic comes from organic search. This means that if your website is not optimized for search engines, you’re missing out on a significant amount of potential traffic.</p>
+                        <h3 style="font-size: 20px; color: var(--color);">ORGANIC SEARCH IS A PRIMARY SOURCE OF WEBSITE
+                            TRAFFIC</h3>
+                        <p class="text-center">Organic search results drive the majority of website traffic, and studies
+                            show that over 50% of website traffic comes from organic search. This means that if your
+                            website is not optimized for search engines, you’re missing out on a significant amount of
+                            potential traffic.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 px-4 my-4">
                         <h3 style="font-size: 20px; color: var(--color);">HELPS BUILD TRUST AND CREDIBILITY</h3>
-                        <p class="text-center">People trust search engines, and if your website ranks high in search results, it can help build trust and credibility with your target audience. High search engine rankings indicate that your website is a relevant and authoritative source of information.</p>
+                        <p class="text-center">People trust search engines, and if your website ranks high in search
+                            results, it can help build trust and credibility with your target audience. High search
+                            engine rankings indicate that your website is a relevant and authoritative source of
+                            information.</p>
                     </div>
                     <div class="col-lg-4 col-md-6 px-4 my-4">
-                        <h3 style="font-size: 20px; color: var(--color);">IMPROVES USER EXPERIENCE AND ENGAGEMENT ON WEBSITE</h3>
-                        <p class="text-center">SEO involves optimizing your website’s structure and content to make it easy for search engines to understand and index your pages. This also improves the user experience by making your website more organized, informative, and user-friendly.</p>
+                        <h3 style="font-size: 20px; color: var(--color);">IMPROVES USER EXPERIENCE AND ENGAGEMENT ON
+                            WEBSITE</h3>
+                        <p class="text-center">SEO involves optimizing your website’s structure and content to make it
+                            easy for search engines to understand and index your pages. This also improves the user
+                            experience by making your website more organized, informative, and user-friendly.</p>
                     </div>
                     <div class="col-lg-6 col-md-6 px-4 my-4">
                         <h3 style="font-size: 20px; color: var(--color);">COST-EFFECTIVE</h3>
-                        <p class="text-center">SEO is a cost-effective way to drive traffic to your website. Unlike paid advertising, which requires ongoing investment, SEO can provide long-term results with minimal ongoing costs.</p>
+                        <p class="text-center">SEO is a cost-effective way to drive traffic to your website. Unlike paid
+                            advertising, which requires ongoing investment, SEO can provide long-term results with
+                            minimal ongoing costs.</p>
                     </div>
                     <div class="col-lg-6 col-md-6 px-4 my-4">
                         <h3 style="font-size: 20px; color: var(--color);">COMPETITIVE ADVANTAGE</h3>
-                        <p class="text-center">SEO is a highly competitive field, and businesses that invest in SEO can gain a competitive advantage over their competitors. By optimizing your website for search engines, you can attract more traffic and leads, which can lead to increased sales and revenue.</p>
+                        <p class="text-center">SEO is a highly competitive field, and businesses that invest in SEO can
+                            gain a competitive advantage over their competitors. By optimizing your website for search
+                            engines, you can attract more traffic and leads, which can lead to increased sales and
+                            revenue.</p>
                     </div>
                 </div>
                 <hr style="color: var(--light);">
@@ -1232,7 +1247,7 @@
 
     <!-- Focus seo End -->
 
-    
+
 
     <!-- Technologies Start  -->
 
@@ -1369,43 +1384,98 @@
 
     <!-- Staff Augmentation Services End -->
 
-    <!-- Faq Start  -->
+    <!--/////////////////////////// Technologies End ///////////////////////-->
 
     <div class="faq-details container">
-        <h2>Frequently Asked Questions </h2>
+        <h2>Frequently Asked <span>Questions</span> </h2>
         <div class="question-container">
             <div class="question">
-                <button id="button1">
-                    <span>How does Android App Development benefit my business?</span>
+                <button id="button">
+                    <span>1. How important is SEO currently?</span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>
-                    The digitization of a business with the help of Top Android app companies in the World aids a
-                    business by putting it onto a global platform and make it available for global consumption.
-                </p>
+                <p>SEO plays a role, in helping businesses, small and medium sized ones navigate the ever expanding
+                    world of online marketing and paid advertising. It enables all businesses to tap into traffic
+                    providing a chance to attract customers.</p>
             </div>
             <div class="question">
-                <button id="button1">
-                    <span> Why choose iQtechway for Android App Development? </span>
+                <button id="button">
+                    <span> 2. What are the most recent trends in SEO that are useful? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p>
-                    iQtechway is the leading Android App Development Company that cares about the clients and their
-                    experience. With 12+ years of experience and innovation, we have successfully developed 850+ diverse
-                    apps with the help of 200+ expert technicians. Thus, time-efficiency, cost-effectiveness is of
-                    utmost importance to us.</p>
+                <p>Important trends, in the field of SEO for the year 2023 include voice search, local SEO, mobile SEO,
+                    content marketing and social media. It is also crucial to focus on enhancing website rankings on
+                    search engines and attracting a number of visitors. These factors play a role in achieving success,
+                    in the changing landscape of SEO.</p>
             </div>
             <div class="question">
-                <button id="button1">
+                <button id="button">
+                    <span> 3. What are the ways you measure SEO success? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p> As a SEO firm, in Coimbatore, iQtechway values the importance of traffic keyword rankings,
+                    conversion rate, bounce rate and time spent on the page. These metrics provide insights, into how
+                    your SEO initiatives impact your websites performance. If you notice outcomes you can continue with
+                    your existing strategy. Conversely if adjustments are required you have the flexibility to make
+                    changes.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span>4.How does organic versus paid search differ?</span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>Paid search secures a prominent position in search results through payment, while organic search
+                    focuses on unpaid rankings. Organic search optimizes website visibility and rankings for businesses,
+                    providing long-term benefits without relying on paid advertising.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span> 5. What are the advantages of SEO? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>SEO provides increased organic visibility, targeted traffic, cost-effectiveness, trust-building,
+                    improved user experience, long-term results, competitive advantage, local visibility, measurable
+                    outcomes, and adaptability to algorithm changes, benefiting businesses in multiple ways.</p>
+            </div>
+            <div class="question">
+                <button id="button">
                     <span>
 
-                        What will be the expenditure to develop an android app with IQ Tech? </span>
+                        6. How is content important for SEO? </span>
                     <span><i class="fa-solid fa-plus fa-lg"></i></span>
                 </button>
-                <p> Cost of android app development depends on the type of your project and strictly depends on the
-                    maintenance you expect after deployment. So, reach us to know the overall discounted cost. </p>
+                <p>Creating high-quality, relevant content is crucial for SEO. It conveys your website's purpose to search engines, improving rankings. Use keywords, logical structure, and readability, and promote on social media. Benefits include trust-building, establishing expertise, and generating leads/sales.</p>
             </div>
+            <div class="question">
+                <button id="button">
+                    <span> 7. What is Google my business? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p> Google my business (GMB) enhances online presence and customer engagement. It helps businesses get found, connect with customers, drive website traffic, increase visibility, engage with reviews, and boost sales. Utilize this free tool for improved online presence and customer reach.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span>8.How SEO helps in digital marketing?</span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>SEO, or Search Engine Optimization, boosts website ranking in search results, driving more visitors. It enhances brand awareness, and credibility, and reduces marketing costs, offering digital marketers a valuable tool for improving website performance and achieving marketing goals.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span> 9. How does SEO build trust and credibility? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>SEO builds trust and credibility by improving website rankings, user experience, and visibility. Relevant keywords, high-quality content, good navigation, backlinks, and a positive reputation contribute to trust-building. Utilize SEO to establish trust and credibility for your website.</p>
+            </div>
+            <div class="question">
+                <button id="button">
+                    <span>
 
+                        10. Is SEO reasonable in terms of pricing? </span>
+                    <span><i class="fa-solid fa-plus fa-lg"></i></span>
+                </button>
+                <p>SEO cost varies based on factors like website size, industry competition, and SEO company experience. Despite the initial investment, SEO is cost-effective long-term due to increased organic traffic. iQtechway - a top-rated SEO company in Coimbatore helps its clients save money in the long run through a well-planned cost-effective strategy.</p>
+            </div>
         </div>
 
 
@@ -1414,12 +1484,12 @@
     <!-- FAQ End  -->
 
 
-    <script>
+     <script>
 
         // <!-- FAQ'S  -->
 
+        const buttons = document.querySelectorAll("#button");
 
-        const buttons = document.querySelectorAll("#button1");
 
         buttons.forEach(button => {
             button.addEventListener('click', () => {
@@ -1430,7 +1500,6 @@
                 icon.classList.toggle('rotate');
             })
         })
-
 
     </script>
 
